--- a/vm_front/src/components/Navigation/styles.module.scss
+++ b/vm_front/src/components/Navigation/styles.module.scss
@@ -1,15 +1,20 @@
 .links {
     position: fixed;
     left: 0;
-    top: 0;
+    top: 60px;
     background-color: #2684ff;
     height: calc(100vh - 60px);
     width: 240px;
     padding: 10px;
     overflow-x: hidden;
     transition: 0.5s;
-    z-index: 1;
-    height: 100vh;
+    z-index: 2;
+    max-height: calc(100vh - 60px);
+
+    nav {
+        overflow-y: auto;
+        max-height: calc(100vh - 60px);
+    }
 
 
     //&:hover {
@@ -47,4 +52,34 @@
 .avatar {
     border-radius: 50%;
     width: 50px;
+}
+
+.fon {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+}
+
+@media (min-width: 1440px) {
+    .active {
+        left: 0px;
+    }
+
+    .fon {
+        display: none;
+    }
+}
+
+@media (max-width: 1440px) {
+    .links {
+        left: -240px;
+    }
+}
+
+.active {
+    left: 0;
 }
