--- a/vm_front/src/styles/styles.scss
+++ b/vm_front/src/styles/styles.scss
@@ -7,6 +7,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
     //background-color: #ececec;
+    background-image: url("http://localhost:3000/back.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 a {
@@ -231,6 +234,7 @@ a {
 .overflow-auto {
     overflow: auto;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -249,6 +253,7 @@ input::-webkit-inner-spin-button {
     //background-color: transparent;
     //border-bottom-width: 1px;
 }
+
 .table {
     //border-collapse: collapse;
 
@@ -311,6 +316,12 @@ input:-webkit-autofill:focus {
     z-index: 2 !important;
 }
 
+.main_container {
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+}
+
 .head_title {
     font-size: 20px;
     text-align: center;
@@ -319,5 +330,17 @@ input:-webkit-autofill:focus {
 @media print {
     .print_container {
         margin: 50px 0 0 30px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .main_container {
+        margin-left: 240px;
+    }
+}
+
+@media (max-width: 1399px) {
+    .main_container {
+        padding: 20px;
     }
 }
