--- a/vm_front/src/ui/Student/JournalStudent/styles.module.scss
+++ b/vm_front/src/ui/Student/JournalStudent/styles.module.scss
@@ -26,7 +26,7 @@
 
         td {
             padding: 7px 0;
-            border: 1px dashed #E9EDF5;
+            border: 1px solid #757575;
 
             :last-child {
                 border: none;
@@ -47,7 +47,7 @@
 
     div {
         padding: 7px 0;
-        border-bottom: 1px dashed #E9EDF5;
+        border-bottom: 1px dashed #757575;
         display: flex;
         justify-content: center;
         align-items: center;
