--- a/vm_front/src/pages/AuthPage/styles.module.scss
+++ b/vm_front/src/pages/AuthPage/styles.module.scss
@@ -65,8 +65,9 @@
                 top: 50%;
                 transform: translateY(-50%);
                 right: 10px;
-                color: #c4c4c4;
+                color: white;
                 font-size: 24px;
+                cursor: pointer;
             }
         }
 
@@ -82,6 +83,9 @@
             font-size: 16px;
             color: #fff;
             outline: none;
+
+            &:focus {
+            }
 
             &::placeholder {
                 color: #c4c4c4;
@@ -102,6 +106,74 @@
             display: flex;
             justify-content: center;
             align-items: center;
+
+            &:disabled {
+                background: #d0d0d0;
+            }
+        }
+    }
+}
+
+.label {
+    color: #d9d9d9;
+    position: absolute;
+    top: 31%;
+    left: 9px;
+    transition: 0.1s;
+    font-size: 14px;
+}
+
+.content_first {
+    margin-top: 40px;
+}
+
+@media (max-width: 1100px) {
+    .avn {
+        width: 120px;
+    }
+
+    .auth {
+        h1 {
+            font-size: 28px;
+        }
+
+        form {
+            width: 360px;
+        }
+    }
+}
+
+@media (max-height: 800px) {
+    .content_first {
+        margin-top: 20px;
+    }
+
+    .avn {
+        padding-top: 100px;
+        width: 120px;
+    }
+
+    .auth {
+        form {
+            grid-gap: 20px;
+        }
+    }
+
+    .auth {
+        height: calc(100vh - 120px);
+    }
+}
+
+@media (max-height: 600px) {
+    .content_first {
+        margin-top: 0px;
+    }
+}
+
+@media (max-width: 600px) {
+    .auth {
+        form {
+            width: 90%;
         }
     }
 }
