--- a/vm_front/src/components/ModalWindow/styles.module.scss
+++ b/vm_front/src/components/ModalWindow/styles.module.scss
@@ -12,6 +12,7 @@
 
     .modal {
         background-color: white;
+        margin: 0 20px;
         border-radius: 4px;
         min-height: 100px;
         width: 1000px;
@@ -53,5 +54,35 @@
     }
     to {
         transform: translateY(0px);
+    }
+}
+
+@media (max-width: 1400px) {
+    .background {
+        .modal {
+            h1 {
+                font-size: 18px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1000px) {
+    .background {
+        .modal {
+            h1 {
+                font-size: 16px;
+            }
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .background {
+        .modal {
+            h1 {
+                font-size: 14px;
+            }
+        }
     }
 }
