--- a/vm_front/src/styles/styles.scss
+++ b/vm_front/src/styles/styles.scss
@@ -41,8 +41,16 @@ a {
     justify-content: space-between;
 }
 
+.justify-content-around {
+    justify-content: space-around;
+}
+
 .align-items-center {
     align-items: center;
+}
+
+.align-items-end {
+    align-items: end;
 }
 
 .w-100 {
