--- a/vm_front/src/pages/MobileStudentPage/style.module.scss
+++ b/vm_front/src/pages/MobileStudentPage/style.module.scss
@@ -13,3 +13,27 @@
         cursor: pointer;
     }
 }
+
+.card {
+    padding: 15px;
+    width: 330px;
+    background-color: white;
+    box-shadow: 0px 0px 20px rgba(40, 105, 254, 0.07);
+    border-radius: 6px;
+    margin-top: 20px;
+}
+
+.container_vid_zanaytie {
+    margin-top: 26px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.data_present {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
